# MNCM

./: .gitignore  CMakeLists.txt  README.md  build.sh  exe  executable_name  fort.991  gmon.out  main.f90  make.sh  plot_error.gp  plot_flux.gp
3D_NDE/: mat_1.1%_U235.txt  mat_1.9%_U235.txt  mat_2.7%_U235.txt  material_inputs_3g.txt
3D_NDE/src/: m_BC_types.f90  m_CSR_types.f90  m_PCG_solver.f90  m_assembly.f90  m_current.f90  m_iter copy.F90  m_iter.F90  m_kinetic.f90  m_kinetic_para.f90  m_mesh_types.f90  m_petsc.F90  m_subcritical.f90  m_wall_current.f90  main.f90
GEMandEVENT/: .~lock.event_manual.doc#  .~lock.gem_manual.doc#  1Dline_10_one_group.gem  1Dline_10_three_group.gem  1Dline_1_three_group.gem  1d_example_three_groups_iter.gem  event  event_manual.doc  gem  gem_manual.doc  readme
GEMandEVENT/1Dline.event/data/: 1Dline
GEMandEVENT/1Dline.event/data/matxs/: 1Dline
GEMandEVENT/1Dline.event/data/mesh/: 1Dline
GEMandEVENT/1Dline_1.event/data/: 1Dline_1
GEMandEVENT/1Dline_1.event/data/matxs/: 1Dline_1
GEMandEVENT/1Dline_1.event/data/mesh/: 1Dline_1
GEMandEVENT/1Dline_10_three_group.event/data/: 1Dline_10_three_group
GEMandEVENT/Example_Inputs/: 1Dsphere.gem  2D-Reactor.gem  2Dsquare.gem  3DSphere.gem  3Dcube.gem  Azmy.gem  Brantley.gem  Example-Periodic.gem  Example-Surface-Source-and-Albedo.gem  HTR3D-Benchmark.gem  IAEA_Eigenvalue.gem  MikeRZBaresphere.gem  PWR-Cell.gem  Stepanek-3D.gem  Takeda1.gem  Takeda2-a.gem  Takeda2-b.gem  Takeda3.gem  c5moxbenchmark-2grp.gem  c5moxbenchmark-2grp.vtu  checker.gem  hexagon-circle-prism.gem  multigroup1D.gem  pincell.gem  pincellOneRegionOneGroup.gem  pincellTwoRegionOneGroup.gem  pincellarray7times1.gem.gem  prob.gem  seven_spheres_3D.gem  sevenpincellarray.gem  slab_1d_volum.gem  sood_PU-2-0-IN.gem  square.gem  swimming_pool.gem  threebythreearray.gem
GEMandEVENT/Example_Inputs/3Dcube.event/data/: 3Dcube
GEMandEVENT/Example_Inputs/3Dcube.event/data/matxs/: 3Dcube
GEMandEVENT/Example_Inputs/3Dcube.event/data/mesh/: 3Dcube
GEMandEVENT/input_files_examples/: DDA.in  c5g7_assy.in  c5g7_pin.in  cubes.in  htr2D.in  htr3D.in  rod.in  run.txt  supercell.in
GEMandEVENT/multigroup1D.event/data/: multigroup1D
GEMandEVENT/multigroup1D.event/data/matxs/: multigroup1D
GEMandEVENT/multigroup1D.event/data/mesh/: multigroup1D
Transport/src/: m_PCG_solver.f90  m_Sn_RZ.F90  m_Sn_XY.F90  m_Sn_XYZ.F90  m_Sn_slab.F90  m_Sn_spherical.F90  m_constants.f90  m_outpVTK.F90  m_outpVTK.f90  m_petsc.F90  m_quadrature.f90
auto_scripts/: c5g7.py  htr.py  supercell.py  two_region_MMS.py
input_files_examples/: pincell.in  run_test.txt  square.in  vera.in
notebooks/: 08_Nelles_script.ipynb
src/: m_MMS_driver.f90  m_driver.f90  m_global.f90  m_input.f90  m_iterative_power_solver.f90  m_multigroup_1D_diffusion.f90  m_normalise.f90  m_quadrature.f90  m_sparse_mm.f90  m_spectral.f90  m_system.f90  m_thomas_algorithm.f90  m_timer.f90  m_vacuum_BC_solver.f90
src/m_1D/: m_CSR_types.f90  m_constants.f90  m_driver.f90  m_vacuum_BC_solver.f90
src/m_1D_NDE/: m_FV_iterative_power_solver.f90  m_MMS_solver.f90  m_driver.f90  m_iterative_power_solver.f90  m_sparse_mm.f90  m_thomas_algorithm.f90
src/m_2D/: m_FV_NDE_2D.f90
src/m_2D_NDE/: m_MMS.f90  m_PCG_solver.f90  m_assembly.f90  m_boundaries.f90  m_dtype.f90  m_g_iter.f90  m_iter.f90  m_matrix_check.f90  m_outpVTK.f90
